kubernetes/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.local
      http:
        paths:
          - backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
    - host: grafana.local
      http:
        paths:
          - backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
